--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/supabase-js": "^2.49.8",
     "ionicons": "^7.4.0",
     "lucide": "^0.487.0",
+    "lucide-react": "^0.511.0",
     "next": "^15.2.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
